# Rubiks_Cube_Solver

./: CMakeLists.txt  README.md  main.cpp
Model/: RubiksCube.h  RubiksCube1dArray.cpp  RubiksCubeBitboard.cpp
Scanner/: CubeScanner.cpp  CubeScanner.h
bits/: stdc++.h
